tests/invalid/invalid-document-header.orgs
orgscript two

process InvalidHeader

  when lead.created
